syntax = "proto3";

package pb;

option go_package = "github.com/grpc/backend/proto;pb";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}